# RDTServer_Vtech

./: .gitignore  README  error_list_v1_0.txt
RDTServer/: .gitignore
RDTServer/RDTServer/: .project  CMakeLists.txt  buildAndRun.sh  buildIPHub.sh  buildLinuxEclipse.sh  clean.sh  compile_script.sh  runClient.sh  runIPHub.sh  runServer.sh
RDTServer/RDTServer/3th_party/curlpp/: CMakeLists.txt
RDTServer/RDTServer/3th_party/curlpp-0.7.3/: Makefile  aclocal.m4  config.status  curlpp-config  curlpp.pc  libtool
RDTServer/RDTServer/3th_party/curlpp-0.7.3/autom4te.cache/: output.0  requests  traces.0  traces.1
RDTServer/RDTServer/3th_party/curlpp-0.7.3/doc/: Makefile
RDTServer/RDTServer/3th_party/curlpp-0.7.3/examples/: Makefile  example01  example02  example06  example09  example10  example12  example13  example15  example16  example20  example21.cpp  example24
RDTServer/RDTServer/3th_party/curlpp-0.7.3/examples/.deps/: example01.Po  example02.Po  example03.Po  example04.Po  example05.Po  example06.Po  example07.Po  example08.Po  example09.Po  example10.Po  example11.Po  example12.Po  example13.Po  example14.Po  example15.Po  example16.Po  example17.Po  example18.Po  example19.Po  example20.Po  example21.Po  example22.Po  example23.Po  example24.Po
RDTServer/RDTServer/3th_party/curlpp-0.7.3/include/: Makefile
RDTServer/RDTServer/3th_party/curlpp-0.7.3/include/curlpp/: Makefile
RDTServer/RDTServer/3th_party/curlpp-0.7.3/include/utilspp/: Makefile
RDTServer/RDTServer/3th_party/curlpp-0.7.3/src/: Makefile
RDTServer/RDTServer/3th_party/curlpp-0.7.3/src/curlpp/: Makefile
RDTServer/RDTServer/3th_party/curlpp-0.7.3/src/utilspp/: Makefile
RDTServer/RDTServer/3th_party/curlpp/src/curlpp/: CMakeLists.txt
RDTServer/RDTServer/3th_party/jsoncpp-1.6.5/: CMakeLists.txt
RDTServer/RDTServer/3th_party/libcurl/arm/: libcurl.so.5
RDTServer/RDTServer/3th_party/litesql-src-0.3.17/: CMakeLists.txt
RDTServer/RDTServer/3th_party/litesql-src-0.3.17/src/examples/: exampledatabase.cpp
RDTServer/RDTServer/3th_party/sqlite-amalgamation-3110100/: CMakeLists.txt
RDTServer/RDTServer/CMake/: cotire.cmake
RDTServer/RDTServer/CMake/toolchain/Vtech/: Toolchain-Linux-x86_64.cmake
RDTServer/RDTServer/DeviceAPI/: AccessoryDao.cpp  AccessoryDao.hpp  AccessoryPojo.cpp  AccessoryPojo.hpp  BaseData.cpp  BaseData.hpp  BinraryRDTClientCommand.cpp  BinraryRDTClientCommand.hpp  BinraryRDTClientConnect.cpp  BinraryRDTClientConnect.hpp  BinraryRDTCommand.cpp  BinraryRDTCommand.hpp  BinraryRDTServerCommand.cpp  BinraryRDTServerCommand.hpp  BinraryRDTServerConnect.cpp  BinraryRDTServerConnect.hpp  CMakeLists.txt  CharacteristicDao.hpp  CharacteristicPojo.hpp  Command.cpp  Command.hpp  CommandEvent.hpp  CommandException.cpp  CommandException.hpp  CommandHardwardCURDEvent.hpp  CommandHardwardEvent.hpp  Common.hpp  Connect.hpp  Dao.cpp  Dao.hpp  DaoManager.hpp  DatabaseException.cpp  DatabaseException.hpp  DatabaseManager.cpp  DatabaseManager.hpp  Device.cpp  Device.hpp  ElementDao.cpp  ElementDao.hpp  ElementNODao.cpp  (+49 more)
RDTServer/RDTServer/JsonList/: Add_Accessories.json  Delete_Accessories.json  Get_All_Accessories.json  Get_Multiple_Element.json  Get_Not_Exist_Accessory.json  Get_One_Accessory.json  Get_Two_Accessories.json  Set_Accessories.json  Set_Multiple_Element.json
RDTServer/RDTServer/RDTServer/: CMakeLists.txt  buildAndRun.sh
RDTServer/RDTServer/RDTServer/3th_party/curlpp-0.7.3/: Makefile  libtool
RDTServer/RDTServer/RDTServer/src/: BinraryRDTClientConnect.hpp  BinraryRDTServerCommand.cpp  BinraryRDTServerConnect.cpp  BinraryRDTServerConnect.hpp  Command.hpp  ConnectEvent.hpp  Device.cpp  Device.hpp  Hardward.hpp  HardwardEvent.hpp  JsonRDTClientCommand.hpp  JsonRDTCommand.cpp  JsonRDTCommand.hpp  JsonRDTServerHardward.cpp  JsonRDTServerHardward.hpp  Makefile  SampoDevice.hpp  TUTKDoorDevice.cpp  TUTKDoorDevice.hpp  TUTKDoorEnum.hpp  TUTKGasDevice.cpp  TUTKGasEnum.hpp  TUTKGatewayDevice.hpp  TUTKLightingDevice.cpp  TUTKLightingEnum.hpp  TUTKPIRDevice.cpp  TUTKPIRDevice.hpp  TUTKPIREnum.hpp  TUTKPlugDevice.hpp  TUTKSampoEnum.hpp  TUTKSirenDevice.hpp  TUTKSirenEnum.hpp  TUTKSmokeDevice.cpp  TUTKSmokeDevice.hpp  TUTKSmokeEnum.hpp  TUTKVibrateEnum.hpp  TUTKWaterLeakDevice.cpp  TUTKWaterLeakDevice.hpp  Utility.hpp  VtechGarageDoorDevice.hpp  (+7 more)
RDTServer/RDTServer/Targate/SampleDevice/: JsonRDTClientDevice.cpp  JsonRDTClientDevice.hpp  main.cpp
RDTServer/RDTServer/Targate/TUTKDevice/: Body.cpp  Body.hpp  CMakeLists.txt  JsonRDTClientDevice.cpp  JsonRDTClientDevice.hpp  SampoDevice.cpp  TUTKDoorDevice.cpp  TUTKGasDevice.cpp  TUTKGasDevice.hpp  TUTKGatewayDevice.cpp  TUTKGatewayEnum.hpp  TUTKLightingDevice.cpp  TUTKLightingDevice.hpp  TUTKPIRDevice.cpp  TUTKPlugDevice.cpp  TUTKPlugEnum.hpp  TUTKSirenDevice.cpp  TUTKSmokeDevice.cpp  TUTKVibrateDevice.cpp  TUTKVibrateDevice.hpp  TUTKWaterLeakDevice.cpp  main.cpp
RDTServer/RDTServer/Targate/VtechDevice/: CMakeLists.txt  VtechGarageDoorDevice.cpp  VtechIPHubGatewayDevice.cpp  VtechIPHubGatewayDevice.hpp  VtechLightBulbDevice.cpp  VtechLightBulbDevice.hpp  VtechMotionSensorDevice.cpp  VtechMotionSensorDevice.hpp  VtechOpenClosedDevice.cpp  VtechOpenClosedDevice.hpp  VtechVirtualGroupDevice.cpp  VtechWallSwitchDevice.cpp  VtechWallSwitchDevice.hpp  main.cpp
RDTServer/RDTServer/Targate/VtechHardwardDevice/: CMakeLists.txt  VtechIPHubGatewayHardwardDevice.cpp  VtechIPHubGatewayHardwardDevice.hpp  VtechIPHubGatewayHardwardDeviceImpl.cpp  VtechIPHubGatewayHardwardDeviceImpl.hpp  main.cpp
RDTServer/RDTServer/main/: Body.cpp  CMakeLists.txt  VtechOpenClosedEnum.hpp
RDTServer/RDTServer/src/: BinraryRDTClientConnect.cpp  Body.hpp  CMakeLists.txt  Common.hpp  JsonRDTClientCommand.cpp  JsonRDTClientCommand.hpp  JsonRDTClientDevice.hpp  JsonRDTCommand.cpp  JsonRDTServerCommand.cpp  TUTKGatewayDevice.cpp  TUTKPlugDevice.cpp  TUTKVibrateDevice.cpp  TUTKWaterLeakEnum.hpp  UTF.cpp  VtechLightBulbDevice.cpp  VtechMotionSensorDevice.cpp  VtechMotionSensorEnum.hpp  VtechVirtualGroupEnum.hpp  VtechWallSwitchDevice.cpp  main.cpp
client/: client.sh  on_off.js  (+1 more)
(+456 files in other folders)
